11/08/2023 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_AppConfig_Application.json
+++ b/internal/service/cloudformation/schemas/AWS_AppConfig_Application.json
@@ -10,7 +10,7 @@
       "properties": {
         "Key": {
           "type": "string",
-          "description": "The key-value string map. The valid character set is [a-zA-Z1-9+-=._:/]. The tag key can be up to 128 characters and must not start with aws:.",
+          "description": "The key-value string map. The valid character set is [a-zA-Z1-9 +-=._:/-]. The tag key can be up to 128 characters and must not start with aws:.",
           "minLength": 1,
           "maxLength": 128,
           "pattern": ""
