--- a/internal/service/cloudformation/schemas/AWS_AppSync_Resolver.json
+++ b/internal/service/cloudformation/schemas/AWS_AppSync_Resolver.json
@@ -189,7 +189,8 @@
     "create": {
       "permissions": [
         "s3:GetObject",
-        "appsync:CreateResolver"
+        "appsync:CreateResolver",
+        "appsync:GetResolver"
       ]
     },
     "read": {
