--- a/internal/service/cloudformation/schemas/AWS_ECS_TaskSet.json
+++ b/internal/service/cloudformation/schemas/AWS_ECS_TaskSet.json
@@ -167,6 +167,12 @@
     "Service",
     "TaskDefinition"
   ],
+  "tagging": {
+    "taggable": false,
+    "tagOnCreate": false,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false
+  },
   "createOnlyProperties": [
     "/properties/Cluster",
     "/properties/ExternalId",
