--- a/internal/service/cloudformation/schemas/AWS_Wisdom_KnowledgeBase.json
+++ b/internal/service/cloudformation/schemas/AWS_Wisdom_KnowledgeBase.json
@@ -165,7 +165,18 @@
   "handlers": {
     "create": {
       "permissions": [
-        "wisdom:CreateKnowledgeBase"
+        "appflow:CreateFlow",
+        "appflow:DeleteFlow",
+        "appflow:StartFlow",
+        "appflow:TagResource",
+        "appflow:UseConnectorProfile",
+        "app-integrations:CreateDataIntegrationAssociation",
+        "app-integrations:GetDataIntegration",
+        "kms:DescribeKey",
+        "kms:CreateGrant",
+        "kms:ListGrants",
+        "wisdom:CreateKnowledgeBase",
+        "wisdom:TagResource"
       ]
     },
     "update": {
@@ -173,6 +184,9 @@
     },
     "delete": {
       "permissions": [
+        "appflow:DeleteFlow",
+        "appflow:StopFlow",
+        "app-integrations:DeleteDataIntegrationAssociation",
         "wisdom:DeleteKnowledgeBase"
       ]
     },
