--- a/internal/service/cloudformation/schemas/AWS_IVSChat_LoggingConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_IVSChat_LoggingConfiguration.json
@@ -174,12 +174,14 @@
         "s3:PutBucketPolicy",
         "s3:GetBucketPolicy",
         "iam:CreateServiceLinkedRole",
-        "firehose:TagDeliveryStream"
+        "firehose:TagDeliveryStream",
+        "ivschat:TagResource"
       ]
     },
     "read": {
       "permissions": [
-        "ivschat:GetLoggingConfiguration"
+        "ivschat:GetLoggingConfiguration",
+        "ivschat:ListTagsForResource"
       ]
     },
     "update": {
@@ -208,12 +210,15 @@
         "ivschat:DeleteLoggingConfiguration",
         "ivschat:GetLoggingConfiguration",
         "logs:DeleteLogDelivery",
-        "logs:ListLogDeliveries"
+        "logs:ListLogDeliveries",
+        "ivschat:UntagResource",
+        "logs:GetLogDelivery"
       ]
     },
     "list": {
       "permissions": [
-        "ivschat:ListLoggingConfigurations"
+        "ivschat:ListLoggingConfigurations",
+        "ivschat:ListTagsForResource"
       ]
     }
   }
