12/13/2023 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_Connect_InstanceStorageConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_Connect_InstanceStorageConfig.json
@@ -122,7 +122,8 @@
       },
       "required": [
         "Prefix",
-        "RetentionPeriodHours"
+        "RetentionPeriodHours",
+        "EncryptionConfig"
       ]
     },
     "KinesisStreamConfig": {
