--- a/internal/service/cloudformation/schemas/AWS_DMS_ReplicationConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_DMS_ReplicationConfig.json
@@ -123,11 +123,19 @@
       "description": "<p>Contains a map of the key-value pairs for the resource tag or tags assigned to the dataset.</p>"
     }
   },
+  "createOnlyProperties": [
+    "/properties/ResourceIdentifier"
+  ],
   "readOnlyProperties": [
     "/Properties/ReplicationConfigArn"
   ],
   "primaryIdentifier": [
     "/properties/ReplicationConfigArn"
+  ],
+  "additionalIdentifiers": [
+    [
+      "/properties/ReplicationConfigIdentifier"
+    ]
   ],
   "tagging": {
     "taggable": true,
@@ -142,7 +150,11 @@
       "permissions": [
         "dms:CreateReplicationConfig",
         "dms:AddTagsToResource",
-        "dms:ListTagsForResource"
+        "dms:ListTagsForResource",
+        "iam:CreateServiceLinkedRole",
+        "iam:AttachRolePolicy",
+        "iam:PutRolePolicy",
+        "iam:UpdateRoleDescription"
       ]
     },
     "read": {
@@ -156,7 +168,11 @@
         "dms:ModifyReplicationConfig",
         "dms:AddTagsToResource",
         "dms:RemoveTagsToResource",
-        "dms:ListTagsForResource"
+        "dms:ListTagsForResource",
+        "iam:CreateServiceLinkedRole",
+        "iam:AttachRolePolicy",
+        "iam:PutRolePolicy",
+        "iam:UpdateRoleDescription"
       ]
     },
     "list": {
@@ -169,7 +185,9 @@
       "permissions": [
         "dms:DescribeReplicationConfigs",
         "dms:DeleteReplicationConfig",
-        "dms:ListTagsForResource"
+        "dms:ListTagsForResource",
+        "iam:DeleteServiceLinkedRole",
+        "iam:GetServiceLinkedRoleDeletionStatus"
       ]
     }
   }
