--- a/internal/service/cloudformation/schemas/AWS_CodeDeploy_DeploymentConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_CodeDeploy_DeploymentConfig.json
@@ -1,50 +1,11 @@
 {
-  "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-codedeploy",
-  "tagging": {
-    "taggable": false,
-    "tagOnCreate": false,
-    "tagUpdatable": false,
-    "cloudFormationSystemTags": false
-  },
-  "handlers": {
-    "read": {
-      "permissions": [
-        "codedeploy:GetDeploymentConfig"
-      ]
-    },
-    "create": {
-      "permissions": [
-        "codedeploy:CreateDeploymentConfig"
-      ]
-    },
-    "list": {
-      "permissions": [
-        "codedeploy:ListDeploymentConfigs"
-      ]
-    },
-    "delete": {
-      "permissions": [
-        "codedeploy:GetDeploymentConfig",
-        "codedeploy:DeleteDeploymentConfig"
-      ]
-    }
-  },
   "typeName": "AWS::CodeDeploy::DeploymentConfig",
   "description": "Resource Type definition for AWS::CodeDeploy::DeploymentConfig",
-  "createOnlyProperties": [
-    "/properties/DeploymentConfigName",
-    "/properties/MinimumHealthyHosts",
-    "/properties/ComputePlatform",
-    "/properties/TrafficRoutingConfig"
-  ],
-  "additionalProperties": false,
-  "primaryIdentifier": [
-    "/properties/DeploymentConfigName"
-  ],
+  "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-codedeploy",
   "definitions": {
     "TimeBasedLinear": {
-      "additionalProperties": false,
       "type": "object",
+      "additionalProperties": false,
       "properties": {
         "LinearInterval": {
           "type": "integer"
@@ -59,8 +20,8 @@
       ]
     },
     "TimeBasedCanary": {
-      "additionalProperties": false,
       "type": "object",
+      "additionalProperties": false,
       "properties": {
         "CanaryPercentage": {
           "type": "integer"
@@ -75,8 +36,8 @@
       ]
     },
     "TrafficRoutingConfig": {
-      "additionalProperties": false,
       "type": "object",
+      "additionalProperties": false,
       "properties": {
         "Type": {
           "type": "string"
@@ -92,15 +53,49 @@
         "Type"
       ]
     },
-    "MinimumHealthyHosts": {
-      "additionalProperties": false,
+    "MinimumHealthyHostsPerZone": {
       "type": "object",
+      "additionalProperties": false,
       "properties": {
-        "Type": {
-          "type": "string"
-        },
         "Value": {
           "type": "integer"
+        },
+        "Type": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "Type",
+        "Value"
+      ]
+    },
+    "ZonalConfig": {
+      "type": "object",
+      "additionalProperties": false,
+      "properties": {
+        "FirstZoneMonitorDurationInSeconds": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "MonitorDurationInSeconds": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "MinimumHealthyHostsPerZone": {
+          "$ref": "#/definitions/MinimumHealthyHostsPerZone"
+        }
+      },
+      "required": []
+    },
+    "MinimumHealthyHosts": {
+      "type": "object",
+      "additionalProperties": false,
+      "properties": {
+        "Value": {
+          "type": "integer"
+        },
+        "Type": {
+          "type": "string"
         }
       },
       "required": [
@@ -118,13 +113,58 @@
       "description": "A name for the deployment configuration. If you don't specify a name, AWS CloudFormation generates a unique physical ID and uses that ID for the deployment configuration name. For more information, see Name Type.",
       "type": "string"
     },
-    "TrafficRoutingConfig": {
-      "description": "The configuration that specifies how the deployment traffic is routed.",
-      "$ref": "#/definitions/TrafficRoutingConfig"
-    },
     "MinimumHealthyHosts": {
       "description": "The minimum number of healthy instances that should be available at any time during the deployment. There are two parameters expected in the input: type and value.",
       "$ref": "#/definitions/MinimumHealthyHosts"
+    },
+    "ZonalConfig": {
+      "description": "The zonal deployment config that specifies how the zonal deployment behaves",
+      "$ref": "#/definitions/ZonalConfig"
+    },
+    "TrafficRoutingConfig": {
+      "description": "The configuration that specifies how the deployment traffic is routed.",
+      "$ref": "#/definitions/TrafficRoutingConfig"
+    }
+  },
+  "additionalProperties": false,
+  "createOnlyProperties": [
+    "/properties/DeploymentConfigName",
+    "/properties/MinimumHealthyHosts",
+    "/properties/ComputePlatform",
+    "/properties/ZonalConfig",
+    "/properties/TrafficRoutingConfig"
+  ],
+  "primaryIdentifier": [
+    "/properties/DeploymentConfigName"
+  ],
+  "tagging": {
+    "taggable": false,
+    "tagOnCreate": false,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false
+  },
+  "handlers": {
+    "create": {
+      "permissions": [
+        "codedeploy:CreateDeploymentConfig"
+      ]
+    },
+    "read": {
+      "permissions": [
+        "codedeploy:GetDeploymentConfig"
+      ]
+    },
+    "delete": {
+      "permissions": [
+        "codedeploy:GetDeploymentConfig",
+        "codedeploy:DeleteDeploymentConfig"
+      ]
+    },
+    "list": {
+      "permissions": [
+        "codedeploy:ListDeploymentConfigs"
+      ]
     }
   }
 }
+
