--- a/internal/service/cloudformation/schemas/AWS_ServiceCatalogAppRegistry_Application.json
+++ b/internal/service/cloudformation/schemas/AWS_ServiceCatalogAppRegistry_Application.json
@@ -39,6 +39,25 @@
     },
     "Tags": {
       "$ref": "#/definitions/Tags"
+    },
+    "ApplicationTagKey": {
+      "type": "string",
+      "description": "The key of the AWS application tag, which is awsApplication. Applications created before 11/13/2023 or applications without the AWS application tag resource group return no value.",
+      "maxLength": 128,
+      "pattern": "\\w+"
+    },
+    "ApplicationTagValue": {
+      "type": "string",
+      "description": "The value of the AWS application tag, which is the identifier of an associated resource. Applications created before 11/13/2023 or applications without the AWS application tag resource group return no value. ",
+      "maxLength": 256,
+      "pattern": "\\[a-zA-Z0-9_-:/]+"
+    },
+    "ApplicationName": {
+      "type": "string",
+      "description": "The name of the application. ",
+      "minLength": 1,
+      "maxLength": 256,
+      "pattern": "\\w+"
     }
   },
   "additionalProperties": false,
@@ -47,7 +66,10 @@
   ],
   "readOnlyProperties": [
     "/properties/Id",
-    "/properties/Arn"
+    "/properties/Arn",
+    "/properties/ApplicationName",
+    "/properties/ApplicationTagKey",
+    "/properties/ApplicationTagValue"
   ],
   "primaryIdentifier": [
     "/properties/Id"
