Restore previous schema for 'AWS::Route53Resolver::ResolverConfig'.

--- a/internal/service/cloudformation/schemas/AWS_Route53Resolver_ResolverConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_Route53Resolver_ResolverConfig.json
@@ -52,38 +52,29 @@
     "/properties/AutodefinedReverseFlag"
   ],
   "primaryIdentifier": [
-    "/properties/ResourceId"
+    "/properties/Id"
   ],
   "taggable": false,
   "additionalProperties": false,
-  "propertyTransform": {
-    "/properties/AutodefinedReverseFlag": "$join([AutodefinedReverseFlag, \"D\"])"
-  },
   "handlers": {
     "create": {
       "permissions": [
-        "route53resolver:UpdateResolverConfig",
-        "route53resolver:GetResolverConfig",
-        "ec2:DescribeVpcs"
+        "route53resolver:CreateConfig"
       ]
     },
     "read": {
       "permissions": [
-        "route53resolver:GetResolverConfig",
-        "ec2:DescribeVpcs"
+        "route53resolver:GetConfig"
       ]
     },
     "delete": {
       "permissions": [
-        "route53resolver:UpdateResolverConfig",
-        "route53resolver:ListResolverConfigs",
-        "ec2:DescribeVpcs"
+        "route53resolver:DeleteConfig"
       ]
     },
     "list": {
       "permissions": [
-        "route53resolver:ListResolverConfigs",
-        "ec2:DescribeVpcs"
+        "route53resolver:ListConfig"
       ]
     }
   }
