--- a/internal/service/cloudformation/schemas/AWS_EC2_LaunchTemplate.json
+++ b/internal/service/cloudformation/schemas/AWS_EC2_LaunchTemplate.json
@@ -232,6 +232,10 @@
         "AutoRecovery": {
           "description": "Disables the automatic recovery behavior of your instance or sets it to default.",
           "type": "string"
+        },
+        "RebootMigration": {
+          "description": "Disables the automatic reboot-migration behavior of your instance or sets it to default.",
+          "type": "string"
         }
       }
     },
