--- a/internal/service/cloudformation/schemas/AWS_AppRunner_Service.json
+++ b/internal/service/cloudformation/schemas/AWS_AppRunner_Service.json
@@ -111,7 +111,9 @@
             "GO_1",
             "DOTNET_6",
             "PHP_81",
-            "RUBY_31"
+            "RUBY_31",
+            "PYTHON_311",
+            "NODEJS_18"
           ]
         },
         "BuildCommand": {
