--- a/internal/service/cloudformation/schemas/AWS_IoTSiteWise_Project.json
+++ b/internal/service/cloudformation/schemas/AWS_IoTSiteWise_Project.json
@@ -84,6 +84,10 @@
     "create": {
       "permissions": [
         "iotsitewise:CreateProject",
+        "iotsitewise:DescribeProject",
+        "iotsitewise:ListProjectAssets",
+        "iotsitewise:ListTagsForResource",
+        "iotsitewise:TagResource",
         "iotsitewise:BatchAssociateProjectAssets"
       ]
     },
@@ -108,6 +112,7 @@
     },
     "delete": {
       "permissions": [
+        "iotsitewise:DescribeProject",
         "iotsitewise:DeleteProject"
       ]
     },
