--- a/internal/service/cloudformation/schemas/AWS_AppSync_Resolver.json
+++ b/internal/service/cloudformation/schemas/AWS_AppSync_Resolver.json
@@ -1,19 +1,88 @@
 {
+  "tagging": {
+    "taggable": false
+  },
   "typeName": "AWS::AppSync::Resolver",
+  "readOnlyProperties": [
+    "/properties/ResolverArn"
+  ],
   "description": "Resource Type definition for AWS::AppSync::Resolver",
+  "createOnlyProperties": [
+    "/properties/ApiId",
+    "/properties/FieldName",
+    "/properties/TypeName"
+  ],
+  "primaryIdentifier": [
+    "/properties/ResolverArn"
+  ],
+  "required": [
+    "TypeName",
+    "ApiId",
+    "FieldName"
+  ],
   "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-appsync.git",
+  "handlers": {
+    "read": {
+      "permissions": [
+        "appsync:GetResolver"
+      ]
+    },
+    "create": {
+      "permissions": [
+        "s3:GetObject",
+        "appsync:CreateResolver",
+        "appsync:GetResolver"
+      ]
+    },
+    "update": {
+      "permissions": [
+        "s3:GetObject",
+        "appsync:UpdateResolver"
+      ]
+    },
+    "list": {
+      "permissions": [
+        "appsync:ListResolvers"
+      ],
+      "handlerSchema": {
+        "properties": {
+          "TypeName": {
+            "$ref": "resource-schema.json#/properties/TypeName"
+          },
+          "ApiId": {
+            "$ref": "resource-schema.json#/properties/ApiId"
+          }
+        },
+        "required": [
+          "ApiId",
+          "TypeName"
+        ]
+      }
+    },
+    "delete": {
+      "permissions": [
+        "appsync:DeleteResolver"
+      ]
+    }
+  },
+  "writeOnlyProperties": [
+    "/properties/RequestMappingTemplateS3Location",
+    "/properties/ResponseMappingTemplateS3Location",
+    "/properties/CodeS3Location"
+  ],
+  "additionalProperties": false,
   "definitions": {
     "AppSyncRuntime": {
-      "type": "object",
       "additionalProperties": false,
+      "type": "object",
       "properties": {
         "RuntimeVersion": {
-          "type": "string",
-          "description": "The version of the runtime to use."
+          "description": "The version of the runtime to use.",
+          "type": "string"
         },
         "Name": {
-          "type": "string",
-          "description": "The name of the runtime to use."
+          "description": "The name of the runtime to use.",
+          "type": "string"
         }
       },
       "required": [
@@ -22,14 +91,14 @@
       ]
     },
     "PipelineConfig": {
-      "type": "object",
       "additionalProperties": false,
+      "type": "object",
       "properties": {
         "Functions": {
-          "type": "array",
-          "description": "A list of Function objects.",
           "uniqueItems": false,
+          "description": "A list of Function objects.",
           "insertionOrder": false,
+          "type": "array",
           "items": {
             "type": "string"
           }
@@ -37,21 +106,21 @@
       }
     },
     "CachingConfig": {
-      "type": "object",
       "additionalProperties": false,
+      "type": "object",
       "properties": {
         "CachingKeys": {
-          "type": "array",
-          "description": "The caching keys for a resolver that has caching activated. Valid values are entries from the $context.arguments, $context.source, and $context.identity maps.",
           "uniqueItems": false,
+          "description": "The caching keys for a resolver that has caching activated. Valid values are entries from the $context.arguments, $context.source, and $context.identity maps.",
           "insertionOrder": false,
+          "type": "array",
           "items": {
             "type": "string"
           }
         },
         "Ttl": {
-          "type": "number",
-          "description": "The TTL in seconds for a resolver that has caching activated. Valid values are 1-36.00 seconds."
+          "description": "The TTL in seconds for a resolver that has caching activated. Valid values are 1-36.00 seconds.",
+          "type": "number"
         }
       },
       "required": [
@@ -59,16 +128,16 @@
       ]
     },
     "SyncConfig": {
-      "type": "object",
       "additionalProperties": false,
+      "type": "object",
       "properties": {
         "ConflictHandler": {
-          "type": "string",
-          "description": "The Conflict Resolution strategy to perform in the event of a conflict."
+          "description": "The Conflict Resolution strategy to perform in the event of a conflict.",
+          "type": "string"
         },
         "ConflictDetection": {
-          "type": "string",
-          "description": "The Conflict Detection strategy to use."
+          "description": "The Conflict Detection strategy to use.",
+          "type": "string"
         },
         "LambdaConflictHandlerConfig": {
           "$ref": "#/definitions/LambdaConflictHandlerConfig"
@@ -79,154 +148,85 @@
       ]
     },
     "LambdaConflictHandlerConfig": {
-      "type": "object",
       "description": "The LambdaConflictHandlerConfig when configuring LAMBDA as the Conflict Handler.",
       "additionalProperties": false,
+      "type": "object",
       "properties": {
         "LambdaConflictHandlerArn": {
-          "type": "string",
-          "description": "The Amazon Resource Name (ARN) for the Lambda function to use as the Conflict Handler."
+          "description": "The Amazon Resource Name (ARN) for the Lambda function to use as the Conflict Handler.",
+          "type": "string"
         }
       }
     }
   },
   "properties": {
-    "ApiId": {
-      "type": "string",
-      "description": "The AWS AppSync GraphQL API to which you want to attach this resolver."
-    },
-    "CachingConfig": {
-      "$ref": "#/definitions/CachingConfig",
-      "description": "The caching configuration for the resolver."
-    },
-    "Code": {
-      "type": "string",
-      "description": "The resolver code that contains the request and response functions. When code is used, the runtime is required."
-    },
-    "CodeS3Location": {
-      "type": "string",
-      "description": "The Amazon S3 endpoint."
-    },
-    "DataSourceName": {
-      "type": "string",
-      "description": "The resolver data source name."
-    },
-    "FieldName": {
-      "type": "string",
-      "description": "The GraphQL field on a type that invokes the resolver."
-    },
-    "Kind": {
-      "type": "string",
-      "description": "The resolver type."
-    },
-    "MaxBatchSize": {
-      "type": "integer",
-      "description": "The maximum number of resolver request inputs that will be sent to a single AWS Lambda function in a BatchInvoke operation."
+    "TypeName": {
+      "description": "The GraphQL type that invokes this resolver.",
+      "type": "string"
     },
     "PipelineConfig": {
-      "$ref": "#/definitions/PipelineConfig",
-      "description": "Functions linked with the pipeline resolver."
+      "description": "Functions linked with the pipeline resolver.",
+      "$ref": "#/definitions/PipelineConfig"
     },
     "RequestMappingTemplate": {
-      "type": "string",
-      "description": "Request mapping templates are optional when using a Lambda data source. For all other data sources, a request mapping template is required."
-    },
-    "RequestMappingTemplateS3Location": {
-      "type": "string",
-      "description": "The location of a request mapping template in an Amazon S3 bucket. Use this if you want to provision with a template file in Amazon S3 rather than embedding it in your CloudFormation template."
-    },
-    "ResolverArn": {
-      "type": "string",
-      "description": "The Amazon Resource Name (ARN) for the resolver."
+      "description": "Request mapping templates are optional when using a Lambda data source. For all other data sources, a request mapping template is required.",
+      "type": "string"
     },
     "ResponseMappingTemplate": {
-      "type": "string",
-      "description": "The response mapping template."
+      "description": "The response mapping template.",
+      "type": "string"
     },
-    "ResponseMappingTemplateS3Location": {
-      "type": "string",
-      "description": "The location of a response mapping template in an Amazon S3 bucket. Use this if you want to provision with a template file in Amazon S3 rather than embedding it in your CloudFormation template."
+    "MaxBatchSize": {
+      "description": "The maximum number of resolver request inputs that will be sent to a single AWS Lambda function in a BatchInvoke operation.",
+      "type": "integer"
     },
-    "Runtime": {
-      "$ref": "#/definitions/AppSyncRuntime",
-      "description": "Describes a runtime used by an AWS AppSync pipeline resolver or AWS AppSync function. Specifies the name and version of the runtime to use. Note that if a runtime is specified, code must also be specified."
+    "ResolverArn": {
+      "description": "The Amazon Resource Name (ARN) for the resolver.",
+      "type": "string"
     },
     "SyncConfig": {
-      "$ref": "#/definitions/SyncConfig",
-      "description": "The SyncConfig for a resolver attached to a versioned data source."
+      "description": "The SyncConfig for a resolver attached to a versioned data source.",
+      "$ref": "#/definitions/SyncConfig"
     },
-    "TypeName": {
-      "type": "string",
-      "description": "The GraphQL type that invokes this resolver."
-    }
-  },
-  "tagging": {
-    "taggable": false
-  },
-  "additionalProperties": false,
-  "required": [
-    "TypeName",
-    "ApiId",
-    "FieldName"
-  ],
-  "createOnlyProperties": [
-    "/properties/ApiId",
-    "/properties/FieldName",
-    "/properties/TypeName"
-  ],
-  "primaryIdentifier": [
-    "/properties/ResolverArn"
-  ],
-  "readOnlyProperties": [
-    "/properties/ResolverArn"
-  ],
-  "writeOnlyProperties": [
-    "/properties/RequestMappingTemplateS3Location",
-    "/properties/ResponseMappingTemplateS3Location",
-    "/properties/CodeS3Location"
-  ],
-  "handlers": {
-    "create": {
-      "permissions": [
-        "s3:GetObject",
-        "appsync:CreateResolver",
-        "appsync:GetResolver"
-      ]
+    "Code": {
+      "description": "The resolver code that contains the request and response functions. When code is used, the runtime is required.",
+      "type": "string"
     },
-    "read": {
-      "permissions": [
-        "appsync:GetResolver"
-      ]
+    "ResponseMappingTemplateS3Location": {
+      "description": "The location of a response mapping template in an Amazon S3 bucket. Use this if you want to provision with a template file in Amazon S3 rather than embedding it in your CloudFormation template.",
+      "type": "string"
     },
-    "update": {
-      "permissions": [
-        "s3:GetObject",
-        "appsync:UpdateResolver"
-      ]
+    "Runtime": {
+      "description": "Describes a runtime used by an AWS AppSync pipeline resolver or AWS AppSync function. Specifies the name and version of the runtime to use. Note that if a runtime is specified, code must also be specified.",
+      "$ref": "#/definitions/AppSyncRuntime"
     },
-    "delete": {
-      "permissions": [
-        "appsync:DeleteResolver"
-      ]
+    "CodeS3Location": {
+      "description": "The Amazon S3 endpoint.",
+      "type": "string"
     },
-    "list": {
-      "permissions": [
-        "appsync:ListResolvers"
-      ],
-      "handlerSchema": {
-        "properties": {
-          "ApiId": {
-            "$ref": "resource-schema.json#/properties/ApiId"
-          },
-          "TypeName": {
-            "$ref": "resource-schema.json#/properties/TypeName"
-          }
-        },
-        "required": [
-          "ApiId",
-          "TypeName"
-        ]
-      }
+    "DataSourceName": {
+      "description": "The resolver data source name.",
+      "type": "string"
+    },
+    "Kind": {
+      "description": "The resolver type.",
+      "type": "string"
+    },
+    "CachingConfig": {
+      "description": "The caching configuration for the resolver.",
+      "$ref": "#/definitions/CachingConfig"
+    },
+    "RequestMappingTemplateS3Location": {
+      "description": "The location of a request mapping template in an Amazon S3 bucket. Use this if you want to provision with a template file in Amazon S3 rather than embedding it in your CloudFormation template.",
+      "type": "string"
+    },
+    "ApiId": {
+      "description": "The AWS AppSync GraphQL API to which you want to attach this resolver.",
+      "type": "string"
+    },
+    "FieldName": {
+      "description": "The GraphQL field on a type that invokes the resolver.",
+      "type": "string"
     }
   }
 }
