--- a/internal/service/cloudformation/schemas/AWS_Config_ConfigurationAggregator.json
+++ b/internal/service/cloudformation/schemas/AWS_Config_ConfigurationAggregator.json
@@ -111,6 +111,13 @@
   "readOnlyProperties": [
     "/properties/ConfigurationAggregatorArn"
   ],
+  "tagging": {
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": true,
+    "cloudFormationSystemTags": false,
+    "tagProperty": "/properties/Tags"
+  },
   "createOnlyProperties": [
     "/properties/ConfigurationAggregatorName"
   ],
