--- a/internal/service/cloudformation/schemas/AWS_Config_StoredQuery.json
+++ b/internal/service/cloudformation/schemas/AWS_Config_StoredQuery.json
@@ -76,6 +76,13 @@
     "/properties/QueryId",
     "/properties/QueryArn"
   ],
+  "tagging": {
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": true,
+    "cloudFormationSystemTags": true,
+    "tagProperty": "/properties/Tags"
+  },
   "createOnlyProperties": [
     "/properties/QueryName"
   ],
