--- a/internal/service/cloudformation/schemas/AWS_IVS_RecordingConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_IVS_RecordingConfiguration.json
@@ -187,6 +187,13 @@
     }
   },
   "additionalProperties": false,
+  "tagging": {
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": true,
+    "cloudFormationSystemTags": false,
+    "tagProperty": "/properties/Tags"
+  },
   "required": [
     "DestinationConfiguration"
   ],
