02/07/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_EC2_GatewayRouteTableAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_EC2_GatewayRouteTableAssociation.json
@@ -16,6 +16,12 @@
       "type": "string"
     }
   },
+  "tagging": {
+    "taggable": false,
+    "tagOnCreate": false,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false
+  },
   "additionalProperties": false,
   "required": [
     "RouteTableId",
