--- a/internal/service/cloudformation/schemas/AWS_SageMaker_App.json
+++ b/internal/service/cloudformation/schemas/AWS_SageMaker_App.json
@@ -202,12 +202,14 @@
     },
     "read": {
       "permissions": [
+        "sagemaker:DescribeApp",
         "sagemaker:DescribeApp"
       ]
     },
     "delete": {
       "permissions": [
-        "sagemaker:DeleteApp"
+        "sagemaker:DeleteApp",
+        "sagemaker:DescribeApp"
       ]
     },
     "list": {
