--- a/internal/service/cloudformation/schemas/AWS_Wisdom_KnowledgeBase.json
+++ b/internal/service/cloudformation/schemas/AWS_Wisdom_KnowledgeBase.json
@@ -180,7 +180,9 @@
       ]
     },
     "update": {
-      "permissions": []
+      "permissions": [
+        "wisdom:GetKnowledgeBase"
+      ]
     },
     "delete": {
       "permissions": [
