--- a/internal/service/cloudformation/schemas/AWS_AppRunner_VpcConnector.json
+++ b/internal/service/cloudformation/schemas/AWS_AppRunner_VpcConnector.json
@@ -92,6 +92,7 @@
   "handlers": {
     "create": {
       "permissions": [
+        "iam:CreateServiceLinkedRole",
         "apprunner:CreateVpcConnector",
         "apprunner:DescribeVpcConnector",
         "apprunner:TagResource",
