--- a/internal/service/cloudformation/schemas/AWS_EC2_SubnetRouteTableAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_EC2_SubnetRouteTableAssociation.json
@@ -1,17 +1,20 @@
 {
   "typeName": "AWS::EC2::SubnetRouteTableAssociation",
-  "description": "Resource Type definition for AWS::EC2::SubnetRouteTableAssociation",
+  "description": "Associates a subnet with a route table. The subnet and route table must be in the same VPC. This association causes traffic originating from the subnet to be routed according to the routes in the route table. A route table can be associated with multiple subnets. To create a route table, see [AWS::EC2::RouteTable](https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-routetable.html).",
   "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-ec2.git",
   "additionalProperties": false,
   "properties": {
     "Id": {
-      "type": "string"
+      "type": "string",
+      "description": ""
     },
     "RouteTableId": {
-      "type": "string"
+      "type": "string",
+      "description": "The ID of the route table.\n The physical ID changes when the route table ID is changed."
     },
     "SubnetId": {
-      "type": "string"
+      "type": "string",
+      "description": "The ID of the subnet."
     }
   },
   "tagging": {
