--- a/internal/service/cloudformation/schemas/AWS_RoboMaker_SimulationApplicationVersion.json
+++ b/internal/service/cloudformation/schemas/AWS_RoboMaker_SimulationApplicationVersion.json
@@ -46,7 +46,12 @@
     "create": {
       "permissions": [
         "robomaker:CreateSimulationApplicationVersion",
-        "s3:GetObject"
+        "s3:GetObject",
+        "ecr:BatchGetImage",
+        "ecr:GetAuthorizationToken",
+        "ecr:BatchCheckLayerAvailability",
+        "ecr-public:GetAuthorizationToken",
+        "sts:GetServiceBearerToken"
       ]
     },
     "delete": {
